src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Community_Contact_ID__c</fullName>
        <description>Populate the 18 digit Salesforce ID of this User&apos;s Contact record.  This is used to define the Community Profile fields that are displayed for this user. Only use this field if the User is a full Salesforce licensed user and not a Community-only user.</description>
        <label>Community Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Registration_Date__c</fullName>
        <label>Completed Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_of_Use__c</fullName>
        <description>Captures the DateTime when the user agrees to the Terms of Use statement on the registration for the community.</description>
        <label>Terms of Use</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>Community_Contact_ID__c</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>b</value>
        </filters>
        <label>Community Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>